--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,8 @@
 Django==2.2.4
+django-appconf==1.0.3
+django-compressor==2.3
 django-debug-toolbar==2.0
+Pillow==6.1.0
 pytz==2019.2
+six==1.12.0
 sqlparse==0.3.0
