--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ django-appconf==1.0.3
 django-compressor==2.3
 django-debug-toolbar==2.0
 django-imagekit==4.0.2
+django-import-export==1.2.0
 djangorestframework==3.10.2
 libsass==0.19.2
 pilkit==2.0
